# insights_collect

./: .gitignore  Instruction.md  README.md  docker-compose.yml
.claude/: settings.json
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_search_hits_and_options.py
backend/app/: config.py  main.py
backend/app/agents/: control.py  graph.py  main_model.py  runner.py  state.py
backend/app/agents/nodes/: cluster_analyzer.py  dedup_merger.py  event_curator.py  expert_discoverer.py  knowledge_writer.py  multi_search.py  planner.py  report_composer.py  viewpoint_extractor.py
backend/app/api/: knowledge.py  reports.py  runs.py  settings.py  templates.py
backend/app/db/: models.py  session.py  types.py
backend/app/providers/: anthropic_provider.py  base.py  credentials.py  gemini_provider.py  grok_provider.py  openai_compat_provider.py  openai_provider.py  perplexity_provider.py  registry.py
backend/app/render/: markdown_renderer.py  pdf_renderer.py  ppt_outline_renderer.py  template_engine.py
backend/app/schemas/: api.py  llm.py
backend/app/seeds/: default_events.py  default_templates.py  runner.py
backend/app/tools/: smoke.py
frontend/: next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentStepper.tsx  ClaudeOptionsPanel.tsx  ExpertQuotesView.tsx  GeminiOptionsPanel.tsx  GrokOptionsPanel.tsx  Nav.tsx  NumberField.tsx  QwenOptionsPanel.tsx  (+2 more)
(+14 files in other folders)
